--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 
 
-
 <body class="">
 
 
@@ -38,7 +37,7 @@
     </div>
     <div class="card">
         <h1>Card</h1>
-        <ul class="listCard" id="listCard">
+        <ul class="listCard" id="listCard2">
         </ul>
         <div class="checkOut" id="checkOut">
             <div class="total">0</div>
@@ -46,45 +45,37 @@
             <button id="save-pdf">Save as PDF</button>
             <button onclick="clearCart()">Clear Cart</button>
         </div>
+
     </div>
 
 
 
     <script src="script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+    <script>
+        document.getElementById("save-pdf").addEventListener("click", function() {
+            const listCard2Element = document.querySelector(".listCard");
+            const checkOutElement = document.getElementById("checkOut");
+
+            // เรียกใช้ฟังก์ชัน reloadCard2 เพื่อเตรียมข้อมูลการ์ด
+            reloadCard2();
+
+            // สร้าง div ใหม่เพื่อเก็บเนื้อหาของ listCard2 และ checkOut
+            const combinedElement = document.createElement('div');
+
+            // เพิ่มเนื้อหาของ listCard2 เข้าไปใน combinedElement
+            combinedElement.appendChild(listCard2Element.cloneNode(true)); // cloneNode(true) จะคัดลอก child nodes ทั้งหมดด้วย
+
+            // เพิ่มเนื้อหาของ checkOut เข้าไปใน combinedElement
+            combinedElement.appendChild(checkOutElement.cloneNode(true));
+
+            // บันทึกเนื้อหาที่รวมกันเป็น PDF
+            html2pdf().from(combinedElement).save();
+        });
+    </script>
 
 </body>
 
-</html>
 
-
-<h2 id="cart-title">Cart</h2>
-<div id="cart">
-    <p>No items in cart.</p>
-
-</div>
-
-</div>
-</div>
-<script src="cart.js"></script>
-
-<script>
-    document.getElementById("save-pdf").addEventListener("click", function() {
-        const listCardElement = document.getElementById("listCard");
-        const checkOutElement = document.getElementById("checkOut");
-
-        // สร้าง div ใหม่เพื่อเก็บเนื้อหาของ listCard และ checkOut
-        const combinedElement = document.createElement('div');
-
-        // เพิ่มเนื้อหาของ listCard และ checkOut เข้าไปใน combinedElement
-        combinedElement.appendChild(listCardElement.cloneNode(true)); // cloneNode(true) จะคัดลอก child nodes ทั้งหมดด้วย
-        combinedElement.appendChild(checkOutElement.cloneNode(true));
-
-        // บันทึกเนื้อหาที่รวมกันเป็น PDF
-        html2pdf().from(combinedElement).save();
-    });
-</script>
-
-</body>
 
 </html>
